package com.payroll.service.discount;

public enum DiscountType {
    INSS,
    IRRF,
    TRANSPORT
}
